vamos por ahora

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -121,12 +121,23 @@
         </div>
     </main>
 
-    <!-- Footer -->
-    <footer class="bg-black py-8">
-        <div class="container mx-auto text-center text-white">
-            <p>&copy; 2024 Smartraining. Todos los derechos reservados.</p>
+
+<!-- Footer -->
+<footer class="bg-black text-white py-8">
+    <div class="container mx-auto text-center">
+        <p>&copy; 2024 Smartraining. Todos los derechos reservados.</p>
+        <div class="mt-4">
+            <a href="https://www.facebook.com/Smartraining.uy" class="text-gray-400 md:hover:text-white mx-2">Facebook</a>
+            <a href="https://www.instagram.com/smartraining.uy/" class="text-gray-400 md:hover:text-white mx-2">Instagram</a>
         </div>
-    </footer>
+    </div>
+</footer>
+
+<!-- Enlace al archivo de JavaScript -->
+<script src="../js/logica.js"></script>
+
+<script src="https://cdn.tailwindcss.com"></script>
+
 
 </body>
 </html>
