--- a/pages/nuestras-clases.html
+++ b/pages/nuestras-clases.html
@@ -91,7 +91,7 @@
             </p>
             <div class="space-x-4">
                 <a href="#services" class="inline-block px-6 py-3 bg-gradient-to-r from-red-600 to-orange-600 text-white rounded-full shadow-lg hover:bg-red-700 transition duration-300">Comienza hoy</a>
-                <a href="#" class="inline-block px-6 py-3 border border-red-600 text-red-600 font-bold rounded-full shadow-lg hover:bg-red-600 hover:text-white transition duration-300">Ver clases</a>
+                <a href="#smartcross" class="inline-block px-6 py-3 border border-red-600 text-red-600 font-bold rounded-full shadow-lg hover:bg-red-600 hover:text-white transition duration-300">Ver clases</a>
             </div>
         </div>
 
