ultimos cambios, falta beneficios y salimos

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                 <div class="p-6">
                     <h3 class="text-2xl font-extrabold italic uppercase text-red-600">Smartcross</h3>
                     <p class="mt-4 text-gray-700">Potencia tu fuerza y resistencia con nuestras clases de Crosstraining, únicas en la ciudad.</p>
+                    <a href="./pages/nuestras-clases.html#smartcross" class="text-red-600 md:hover:from-red-600 md:hover:to-orange-600 transition duration-300">Más Información ></a>
                 </div>
             </div>
             <!-- Class Card 2 -->
@@ -127,6 +128,7 @@
                 <div class="p-6">
                     <h3 class="text-2xl font-extrabold italic uppercase text-orange-600">Smartfun</h3>
                     <p class="mt-4 text-gray-700">Mejora tu agilidad y coordinación con nuestros entrenamientos funcionales adaptados a todos los niveles.</p>
+                    <a href="./pages/nuestras-clases.html#smartfun" class="text-red-600 md:hover:from-red-600 md:hover:to-orange-600 transition duration-300">Más Información ></a>
                 </div>
             </div>
             <!-- Class Card 3 -->
@@ -135,6 +137,7 @@
                 <div class="p-6">
                     <h3 class="text-2xl font-extrabold italic uppercase text-red-600">Pilates</h3>
                     <p class="mt-4 text-gray-700">Fortalece tu cuerpo y mente con nuestras clases de Pilates, guiadas por instructores expertos.</p>
+                    <a href="./pages/nuestras-clases.html#pilates" class="text-red-600 md:hover:from-red-600 md:hover:to-orange-600 transition duration-300">Más Información ></a>
                 </div>
             </div>
             <!-- Class Card 4 -->
@@ -143,6 +146,7 @@
                 <div class="p-6">
                     <h3 class="text-2xl font-extrabold italic uppercase text-orange-600">Smartfree</h3>
                     <p class="mt-4 text-gray-700">Accede a un entrenamiento personalizado en nuestra sala de aparatos de última generación.</p>
+                    <a href="./pages/nuestras-clases.html#smartfree" class="text-red-600 md:hover:from-red-600 md:hover:to-orange-600 transition duration-300">Más Información ></a>
                 </div>
             </div>
             <!-- Class Card 5 -->
@@ -151,6 +155,7 @@
                 <div class="p-6">
                     <h3 class="text-2xl font-extrabold italic uppercase text-red-600">Pase Libre</h3>
                     <p class="mt-4 text-gray-700">Disfruta de acceso ilimitado a todas nuestras actividades y servicios con el Pase Libre.</p>
+                    <a href="./pages/nuestras-clases.html#pase-libre" class="text-red-600 md:hover:from-red-600 md:hover:to-orange-600 transition duration-300">Más Información ></a>
                 </div>
             </div>
             <!-- Class Card 6 -->
@@ -159,6 +164,7 @@
                 <div class="p-6">
                     <h3 class="text-2xl font-extrabold italic uppercase text-orange-600">Entrenamiento Online</h3>
                     <p class="mt-4 text-gray-700">Planificaciones personalizadas con seguimiento online para que puedas entrenar desde donde estés.</p>
+                    <a href="./pages/nuestras-clases.html#entrenamiento-online" class="text-red-600 md:hover:from-red-600 md:hover:to-orange-600 transition duration-300">Más Información ></a>
                 </div>
             </div>
         </div>
@@ -175,23 +181,26 @@
             <div class="relative z-10 grid grid-cols-1 md:grid-cols-2 gap-12 mt-12">
                 <!-- Testimonial 1 -->
                 <div class="relative bg-white rounded-lg shadow-lg p-8 transform md:hover:scale-105 transition duration-500 ease-in-out">
-                    <p class="relative text-lg italic text-gray-800 z-20">"En Smartraining no solo hago deporte, sino que me divierto. Los profesores y compañeros te motivan, y el ambiente es increíble. Es un lugar donde realmente disfruto entrenar."</p>
-                    <p class="relative mt-4 text-xl font-bold text-red-600 z-20">Manuela</p>
-                    <div class="absolute bottom-0 right-0 w-24 h-24 bg-gradient-to-r from-red-600 to-orange-600 rounded-full opacity-100 transform translate-x-1/2 translate-y-1/2 rotate-45"></div>
+                    <a href="https://www.instagram.com/p/C6uMgK5x46J/">
+                        <p class="relative text-lg italic text-gray-800 z-20">"En Smartraining no solo hago deporte, sino que me divierto. Los profesores y compañeros te motivan, y el ambiente es increíble. Es un lugar donde realmente disfruto entrenar."</p>
+                        <p class="relative mt-4 text-xl font-bold text-red-600 z-20">Manuela</p>
+                    </a>
+                    <div class="absolute bottom-0 right-0 w-24 h-24 bg-gradient-to-r from-red-600 to-orange-600 rounded-full transform translate-x-1/2 translate-y-1/2 rotate-45"></div>
                 </div>
-    
                 <!-- Testimonial 2 -->
                 <div class="relative bg-white rounded-lg shadow-lg p-8 transform md:hover:scale-105 transition duration-500 ease-in-out">
-                    <div class="absolute bottom-10 -left-10 w-12 h-12 bg-gradient-to-b from-red-600 to-orange-600 rounded-full opacity-100 transform translate-x-1/2 -translate-y-1/2 rotate-45"></div>
-                    <p class="relative text-lg italic text-gray-800 z-20">"Desde que comencé en Smartraining, he notado un cambio en mi rendimiento físico. El enfoque en objetivos específicos me ha ayudado a mejorar en cada sesión."</p>
-                    <p class="relative mt-4 text-xl font-bold text-red-600 z-20">Lourdes</p>
-                </div>
+                    <div class="absolute bottom-10 -left-10 w-12 h-12 bg-gradient-to-b from-red-600 to-orange-600 rounded-full transform translate-x-1/2 -translate-y-1/2 rotate-45"></div>
+                    <a href="https://www.instagram.com/p/C5UEK4IxouG/">
+                        <p class="relative text-lg italic text-gray-800 z-20">"Desde que comencé en Smartraining, he notado un cambio en mi rendimiento físico. El enfoque en objetivos específicos me ha ayudado a mejorar en cada sesión."</p>
+                        <p class="relative mt-4 text-xl font-bold text-red-600 z-20">Lourdes</p>
+                    </a>
+                </div>                
             </div>
         </div>
     
         <!-- Background decorative shapes -->
         <div class="absolute inset-0 overflow-visible">
-            <div class="absolute -left-10 -top-10 w-96 h-96 bg-gradient-to-b from-orange-600 to-red-600 rounded-full opacity-100"></div>
+            <div class="absolute -left-10 -top-10 w-96 h-96 bg-gradient-to-b from-orange-600 to-red-600 rounded-full"></div>
         </div>
     </section>    
 
@@ -224,6 +233,13 @@
             <a href="./pages/app-de-reserva.html" class="inline-block mt-4 px-8 py-3 text-white rounded-full shadow-lg bg-gradient-to-r from-red-600 to-orange-600 md:hover:from-red-700 md:hover:to-orange-700 transition duration-300">Ver beneficios</a>
         </div>
     </section>
+
+        <!-- Botón flotante para volver arriba -->
+    <a href="#" id="back-to-top" class="fixed bottom-8 right-8 bg-gradient-to-r from-red-600 to-orange-600 text-white w-12 h-12 flex items-center justify-center rounded-full shadow-lg transition duration-300 hover:from-red-700 hover:to-orange-700 z-50">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 15l7-7 7 7" />
+        </svg>
+    </a>
 
     <!-- Footer -->
     <footer class="bg-black text-white py-8">
