--- a/pages/app-de-reserva.html
+++ b/pages/app-de-reserva.html
@@ -110,7 +110,7 @@
                     <p class="text-lg">
                         Regístrate con tus datos. Una vez que lo hayas hecho, avísanos para que podamos agregarte como miembro del gimnasio.
                     </p>
-                    <a href="LINK A WHATSAPP" class="inline-block mt-4 px-8 py-3 text-white rounded-full shadow-lg bg-gradient-to-r from-red-600 to-orange-600 md:hover:from-red-700 md:hover:to-orange-700 transition duration-300">Avisanos acá</a>
+                    <a href="https://wa.me/+59892757437?text=Hola%20ya%20me%20registre%20en%20Wona%20Sports" class="inline-block mt-4 px-8 py-3 text-white rounded-full shadow-lg bg-gradient-to-r from-red-600 to-orange-600 md:hover:from-red-700 md:hover:to-orange-700 transition duration-300">Avisanos acá</a>
                 </div>
                 
                 <!-- Mockup de imagen -->
@@ -154,6 +154,24 @@
         </div>
     </section>
 
+    <!-- Botón de Ayuda de WhatsApp -->
+    <section class="bg-white mt-12 mb-12 py-6 px-12">
+        <div class="container mx-auto text-center">
+            <h3 class="text-2xl font-bold mb-4">¿Tienes alguna duda?</h3>
+            <h3 class="text-2xl font-bold mb-4">¡Estamos aquí para ayudarte!</h3>
+            <p class="mb-6">Si tienes preguntas sobre las reservas o tu plan, no dudes en contactarnos por WhatsApp. Te responderemos lo antes posible.</p>
+            <a href="https://wa.me/+59892757437?text=Hola%20tengo%20una%20consulta%20sobre%20la%20app" class="inline-block px-8 py-3 bg-green-500 text-white font-bold rounded-full shadow-lg hover:bg-green-600 transition duration-300">
+                Contactar por WhatsApp
+            </a>
+        </div>
+    </section>
+
+        <!-- Botón flotante para volver arriba -->
+        <a href="#" id="back-to-top" class="fixed bottom-8 right-8 bg-gradient-to-r from-red-600 to-orange-600 text-white w-12 h-12 flex items-center justify-center rounded-full shadow-lg transition duration-300 hover:from-red-700 hover:to-orange-700 z-50">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 15l7-7 7 7" />
+            </svg>
+        </a>    
 
     <!-- Footer -->
     <footer class="bg-black text-white py-8">
