--- a/pages/nuestras-clases.html
+++ b/pages/nuestras-clases.html
@@ -182,8 +182,8 @@
 
                     <!-- Botones de llamada a la acción -->
                     <div class="space-x-4 flex">
-                        <a href="#" class="px-6 py-3 bg-gradient-to-r from-red-600 to-orange-600 text-white font-bold rounded-full shadow-lg md:hover:from-red-700 md:hover:to-orange-700 transition duration-300">Prueba una clase gratuita</a>
-                        <a href="#" class="px-6 py-3 border border-red-600 text-red-600 font-bold rounded-full shadow-lg md:hover:bg-red-600 md:hover:text-white transition duration-300">Más información</a>
+                        <a href="https://wa.me/+59892757437?text=Hola%20quiero%20una%20prueba%20de%20Smartcross" class="px-6 py-3 bg-gradient-to-r from-red-600 to-orange-600 text-white font-bold rounded-full shadow-lg md:hover:from-red-700 md:hover:to-orange-700 transition duration-300">Prueba una clase gratuita</a>
+                        <a href="https://wa.me/+59892757437?text=Hola%20quiero%20más%20información%20sobre%20Smartcross" class="px-6 py-3 border border-red-600 text-red-600 font-bold rounded-full shadow-lg md:hover:bg-red-600 md:hover:text-white transition duration-300">Más información</a>
                     </div>
                 </div>
 
@@ -225,8 +225,8 @@
 
                     <!-- Botones de llamada a la acción -->
                     <div class="space-x-4 flex">
-                        <a href="#" class="px-6 py-3 bg-gradient-to-r from-orange-600 to-red-600 text-white font-bold rounded-full shadow-lg md:hover:from-orange-700 md:hover:to-red-700 transition duration-300">Prueba una clase gratuita</a>
-                        <a href="#" class="px-6 py-3 border border-orange-600 text-orange-600 font-bold rounded-full shadow-lg md:hover:bg-orange-600 md:hover:text-white transition duration-300">Más información</a>
+                        <a href="https://wa.me/+59892757437?text=Hola%20quiero%20una%20prueba%20de%20Smartfun" class="px-6 py-3 bg-gradient-to-r from-orange-600 to-red-600 text-white font-bold rounded-full shadow-lg md:hover:from-orange-700 md:hover:to-red-700 transition duration-300">Prueba una clase gratuita</a>
+                        <a href="https://wa.me/+59892757437?text=Hola%20quiero%20más%20información%20sobre%20Smartfun" class="px-6 py-3 border border-orange-600 text-orange-600 font-bold rounded-full shadow-lg md:hover:bg-orange-600 md:hover:text-white transition duration-300">Más información</a>
                     </div>
                 </div>
 
@@ -268,8 +268,8 @@
 
                     <!-- Botones de llamada a la acción -->
                     <div class="space-x-4 flex">
-                        <a href="#" class="px-6 py-3 bg-gradient-to-r from-red-600 to-orange-600 text-white font-bold rounded-full shadow-lg md:hover:from-red-700 md:hover:to-orange-700 transition duration-300">Prueba una clase gratuita</a>
-                        <a href="#" class="px-6 py-3 border border-red-600 text-red-600 font-bold rounded-full shadow-lg md:hover:bg-red-600 md:hover:text-white transition duration-300">Más información</a>
+                        <a href="https://wa.me/+59892757437?text=Hola%20quiero%20una%20prueba%20de%20Smartfree" class="px-6 py-3 bg-gradient-to-r from-red-600 to-orange-600 text-white font-bold rounded-full shadow-lg md:hover:from-red-700 md:hover:to-orange-700 transition duration-300">Prueba una clase gratuita</a>
+                        <a href="https://wa.me/+59892757437?text=Hola%20quiero%20más%20información%20sobre%20Smartfree" class="px-6 py-3 border border-red-600 text-red-600 font-bold rounded-full shadow-lg md:hover:bg-red-600 md:hover:text-white transition duration-300">Más información</a>
                     </div>
                 </div>
 
@@ -311,8 +311,8 @@
 
                     <!-- Botones de llamada a la acción -->
                     <div class="space-x-4 flex">
-                        <a href="#" class="px-6 py-3 bg-gradient-to-r from-orange-600 to-red-600 text-white font-bold rounded-full shadow-lg md:hover:from-orange-700 md:hover:to-red-700 transition duration-300">Prueba una clase gratuita</a>
-                        <a href="#" class="px-6 py-3 border border-orange-600 text-orange-600 font-bold rounded-full shadow-lg md:hover:bg-orange-600 md:hover:text-white transition duration-300">Más información</a>
+                        <a href="https://wa.me/+59892757437?text=Hola%20quiero%20empezar%20personalizado%20online" class="px-6 py-3 bg-gradient-to-r from-orange-600 to-red-600 text-white font-bold rounded-full shadow-lg md:hover:from-orange-700 md:hover:to-red-700 transition duration-300">Coordina tu comienzo</a>
+                        <a href="https://wa.me/+59892757437?text=Hola%20quiero%20más%20información%20sobre%20entrenamientos%20online" class="px-6 py-3 border border-orange-600 text-orange-600 font-bold rounded-full shadow-lg md:hover:bg-orange-600 md:hover:text-white transition duration-300">Más información</a>
                     </div>
                 </div>
 
@@ -361,8 +361,8 @@
 
                     <!-- Botones de llamada a la acción -->
                     <div class="space-x-4 flex">
-                        <a href="#" class="px-6 py-3 bg-gradient-to-r from-red-600 to-orange-600 text-white font-bold rounded-full shadow-lg md:hover:from-red-700 md:hover:to-orange-700 transition duration-300">Prueba una clase gratuita</a>
-                        <a href="#" class="px-6 py-3 border border-red-600 text-red-600 font-bold rounded-full shadow-lg md:hover:bg-red-600 md:hover:text-white transition duration-300">Más información</a>
+                        <a href="https://wa.me/+59892757437?text=Hola%20quiero%20una%20prueba%20de%20Pilates" class="px-6 py-3 bg-gradient-to-r from-red-600 to-orange-600 text-white font-bold rounded-full shadow-lg md:hover:from-red-700 md:hover:to-orange-700 transition duration-300">Prueba una clase gratuita</a>
+                        <a href="https://wa.me/+59892757437?text=Hola%20quiero%20más%20información%20sobre%20Pilates" class="px-6 py-3 border border-red-600 text-red-600 font-bold rounded-full shadow-lg md:hover:bg-red-600 md:hover:text-white transition duration-300">Más información</a>
                     </div>
                 </div>
 
@@ -404,8 +404,8 @@
 
                     <!-- Botones de llamada a la acción -->
                     <div class="space-x-4 flex">
-                        <a href="#" class="px-6 py-3 bg-gradient-to-r from-red-600 to-orange-600 text-white font-bold rounded-full shadow-lg md:hover:from-red-700 md:hover:to-orange-700 transition duration-300">Obtén tu pase libre</a>
-                        <a href="#" class="px-6 py-3 border border-red-600 text-red-600 font-bold rounded-full shadow-lg md:hover:bg-red-600 md:hover:text-white transition duration-300">Más información</a>
+                        <a href="https://wa.me/+59892757437?text=Hola%20quiero%20un%20Pase%20Libre" class="px-6 py-3 bg-gradient-to-r from-red-600 to-orange-600 text-white font-bold rounded-full shadow-lg md:hover:from-red-700 md:hover:to-orange-700 transition duration-300">Obtén tu pase libre</a>
+                        <a href="https://wa.me/+59892757437?text=Hola%20quiero%20más%20información%20del%20Pase%20Libre" class="px-6 py-3 border border-red-600 text-red-600 font-bold rounded-full shadow-lg md:hover:bg-red-600 md:hover:text-white transition duration-300">Más información</a>
                     </div>
                 </div>
 
@@ -418,6 +418,14 @@
 
     </div>
 </main>
+
+<!-- Botón flotante para volver arriba -->
+<a href="#" id="back-to-top" class="fixed bottom-8 right-8 bg-gradient-to-r from-red-600 to-orange-600 text-white w-12 h-12 flex items-center justify-center rounded-full shadow-lg transition duration-300 hover:from-red-700 hover:to-orange-700 z-50">
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 15l7-7 7 7" />
+    </svg>
+</a>
+
 
 <!-- Footer -->
 <footer class="bg-black text-white py-8">
@@ -435,6 +443,7 @@
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>AOS.init();</script>
+
 
 </body>
 </html>
