Actualizacion despues de lanzar la pagina

--- a/pages/nuestras-clases.html
+++ b/pages/nuestras-clases.html
@@ -111,7 +111,7 @@
                     </a>
                     <!-- Botón que lleva a Entrenamiento Online -->
                     <a href="#entrenamiento-online" class="inline-block px-6 py-3 bg-gradient-to-r from-red-600 to-orange-600 text-white rounded-full shadow-lg hover:bg-red-700 transition duration-300">
-                        Entrenamiento Online
+                        Smartline
                     </a>
                     <!-- Botón que lleva a Pase Libre -->
                     <a href="#pase-libre" class="inline-block px-6 py-3 bg-gradient-to-r from-red-600 to-orange-600 text-white rounded-full shadow-lg hover:bg-red-700 transition duration-300">
@@ -292,7 +292,7 @@
                     </div>
 
                     <!-- Título grande -->
-                    <h2 class="text-5xl font-extrabold italic uppercase text-orange-600 leading-tight mb-4">Entrenamiento Online</h2>
+                    <h2 class="text-5xl font-extrabold italic uppercase text-orange-600 leading-tight mb-4">Smartline</h2>
                     <p class="text-xl text-black mb-6">
                         No importa dónde estés, tu compromiso y dedicación pueden llevarte lejos. Con el entrenamiento online, siempre tienes un camino hacia tu mejor versión, estés donde estés.
                     </p>
